infra/k8s/local/expiration-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticketing-expiration-depl
spec:
  replicas: 1
  selector:
    matchLabel:
      app: ticketing-expiration
  template:
    metadata:
      labels:
        app: ticketing-expiration
    spec:
      containers:
        - name: ticketing-expiration
          image: gumberss/tiketing-expiration
