infra/k8s/local/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: ticketing-client
  template:
    metadata:
      labels:
        app: ticketing-client
    spec:
      containers:
        - name: client
          image: gumberss/client
---

apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec:
  selector:
    app: ticketing-client
  ports:
    - name: client
      protocol: TCP
      port: 3000
      targetPort: 3000
