infra/k8s/local/orders-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticketing-orders
  template:
    metadata: 
      labels:
        app: ticketing-orders
    spec:
      containers:
        - name: ticketing-orders
          image: gumberss/ticketing-orders
---
apiVersion: v1
kind: Service
metadata:
  name: orders-srv
spec:
  selector:
    app: ticketing-orders
  ports:
    - name: orders-port
      protocol: TCP
      port: 3000
      targetPort: 3000
