infra/k8s/local/payments-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: payments-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticketing-payments
  template:
    metadata:
      labels:
        app: ticketing-payments
    spec:
      containers:
        - name: ticketing-payments
          image: gumberss/ticketing-payments
---

apiVersion: v1
kind: Service
metadata: 
  name: payments-srv
spec:
  selector:
    app: ticketing-payments
  ports:
    - name: payment-port
      protocol: TCP
      port: 3000
      targetPort: 3000
