infra/k8s/local/tickets-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tickets-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticketing-tickets
  template:
    metadata: 
      labels:
        app: ticketing-tickets
    spec:
      containers:
        - name: ticketing-tickets
          image: gumberss/ticketing-tickets
---
apiVersion: v1
kind: Service
metadata:
  name: tickets-srv
spec:
  selector:
    app: ticketing-tickets
  ports:
    - name: tickets-port
      protocol: TCP
      port: 3000
      targetPort: 3000
